Major updates to the game. Basic Loyout created

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,19 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotaría</title>
-
 </head>
 
 <body>
-
-    <div id="title">
-        <h1>Lotaría</h1>
-    </div>
-    <div id="cardimg">
-
+    <div class="container">
+        <h1>Lotaria<br>Choose Your Role</h1>
+        <div class="button-container">
+            <button class="button player" onclick="location.href='player.html'">Player</button>
+            <button class="button dealer" onclick="location.href='dealer.html'">Dealer</button>
+        </div>
     </div>
 </body>
 
