--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h1>Lotaria<br>Choose Your Role</h1>
         <div class="button-container">
-            <button class="button player" onclick="location.href='player.html'">Player</button>
-            <button class="button dealer" onclick="location.href='dealer.html'">Dealer</button>
+            <button class="button player" onclick="location.href='/pages/player.html'">Player</button>
+            <button class="button dealer" onclick="location.href='/pages/dealer.html'">Dealer</button>
         </div>
     </div>
 </body>
