--- a/pages/dealer.html
+++ b/pages/dealer.html
@@ -18,7 +18,7 @@
     <script src="/JAVA/dealer.js"></script>
     <div class="footer">
         <button class="button shuffle" onclick="location.href='dealer.html'">Shuffle Deck</button>
-        <button class="button home" onclick="location.href='index.html'">Home</button>
+        <button class="button home" onclick="location.href='../index.html'">Home</button>
     </div>
 
 </body>
