Updated Card Dealer Page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotaría</title>
 </head>
 
 <body>
     <div class="container">
-        <h1>Lotaria<br>Choose Your Role</h1>
+        <h1>
+            <div class="title">Lotaría</div><br>Choose Your Role
+        </h1>
         <div class="button-container">
             <button class="button player" onclick="location.href='/pages/player.html'">Player</button>
             <button class="button dealer" onclick="location.href='/pages/dealer.html'">Dealer</button>
