--- a/pages/dealer.html
+++ b/pages/dealer.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="card" class="card">
+    <div id="card" class="card dealer">
         <div class="card-content">
             <p id="card-text"></p>
         </div>
