--- a/pages/player.html
+++ b/pages/player.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lotaría</title>
+    <title>Player</title>
 </head>
 
 <body>
