--- a/pages/player.html
+++ b/pages/player.html
@@ -12,8 +12,8 @@
     <div id="game-board"></div>
     <script src="/JAVA/player.js"></script>
     <div class="footer">
-        <button class="button newBoard" onclick="location.href='player.html'">New Board</button>
-        <button class="button home" onclick="location.href='../index.html'">Home</button>
+        <button class="button newBoard" onclick="location.href='/pages/player.html'">New Board</button>
+        <button class="button home" onclick="location.href='/index.html'">Home</button>
     </div>
 </body>
 
