--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotaría</title>
 </head>
@@ -14,8 +14,8 @@
             <div class="title">Lotaría</div><br>Choose Your Role
         </h1>
         <div class="button-container">
-            <button class="button player" onclick="location.href='/pages/player.html'">Player</button>
-            <button class="button dealer" onclick="location.href='/pages/dealer.html'">Dealer</button>
+            <button class="button player" onclick="location.href='pages/player.html'">Player</button>
+            <button class="button dealer" onclick="location.href='pages/dealer.html'">Dealer</button>
         </div>
     </div>
 </body>
