--- a/pages/dealer.html
+++ b/pages/dealer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dealer</title>
 </head>
@@ -17,8 +17,8 @@
     <div id="game-deck"></div>
     <script src="/JAVA/dealer.js"></script>
     <div class="footer">
-        <button class="button shuffle" onclick="location.href='/pages/dealer.html'">Shuffle Deck</button>
-        <button class="button home" onclick="location.href='/index.html'">Home</button>
+        <button class="button shuffle" onclick="location.href='../pages/dealer.html'">Shuffle Deck</button>
+        <button class="button home" onclick="location.href='../index.html'">Home</button>
     </div>
 
 </body>
