--- a/pages/player.html
+++ b/pages/player.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player</title>
 </head>
@@ -12,8 +12,8 @@
     <div id="game-board"></div>
     <script src="/JAVA/player.js"></script>
     <div class="footer">
-        <button class="button newBoard" onclick="location.href='/pages/player.html'">New Board</button>
-        <button class="button home" onclick="location.href='/index.html'">Home</button>
+        <button class="button newBoard" onclick="location.href='../pages/player.html'">New Board</button>
+        <button class="button home" onclick="location.href='../index.html'">Home</button>
     </div>
 </body>
 
