--- a/pages/dealer.html
+++ b/pages/dealer.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id="game-deck"></div>
-    <script src="/JAVA/dealer.js"></script>
+    <script src="../JAVA/dealer.js"></script>
     <div class="footer">
         <button class="button shuffle" onclick="location.href='../pages/dealer.html'">Shuffle Deck</button>
         <button class="button home" onclick="location.href='../index.html'">Home</button>
