--- a/pages/player.html
+++ b/pages/player.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="game-board"></div>
-    <script src="/JAVA/player.js"></script>
+    <script src="../JAVA/player.js"></script>
     <div class="footer">
         <button class="button newBoard" onclick="location.href='../pages/player.html'">New Board</button>
         <button class="button home" onclick="location.href='../index.html'">Home</button>
